bindings/c/whiteout_mdx.h

/* ── Opaque handles ───────────────────────────────────────── */

typedef struct whiteout_MdxExtent whiteout_MdxExtent;
typedef struct whiteout_MdxSound whiteout_MdxSound;
typedef struct whiteout_MdxNode whiteout_MdxNode;
typedef struct whiteout_MdxSoundEmitter whiteout_MdxSoundEmitter;
typedef struct whiteout_MdxLayer whiteout_MdxLayer;
typedef struct whiteout_MdxLayerSubTexture whiteout_MdxLayerSubTexture;
typedef struct whiteout_MdxMaterial whiteout_MdxMaterial;
typedef struct whiteout_MdxTextureAnimation whiteout_MdxTextureAnimation;
typedef struct whiteout_MdxGeoset whiteout_MdxGeoset;
void whiteout_mdx_MdxSound_delete(whiteout_MdxSound* self);
/* Path to sound file (44 bytes, null-terminated) */
whiteout_CString whiteout_mdx_MdxSound_get_soundFile(const whiteout_MdxSound* self);
void whiteout_mdx_MdxSound_set_soundFile(whiteout_MdxSound* self, const char* value);
/* Maximum audible distance */
float whiteout_mdx_MdxSound_get_maximumDistance(const whiteout_MdxSound* self);
void whiteout_mdx_MdxSound_set_maximumDistance(whiteout_MdxSound* self, float value);
/* Minimum distance (full volume) */
float whiteout_mdx_MdxSound_get_minimumDistance(const whiteout_MdxSound* self);
void whiteout_mdx_MdxSound_set_minimumDistance(whiteout_MdxSound* self, float value);
/* Sound channel identifier */
uint32_t whiteout_mdx_MdxSound_get_soundChannel(const whiteout_MdxSound* self);
void whiteout_mdx_MdxSound_set_soundChannel(whiteout_MdxSound* self, uint32_t value);
/* ── MdxNode ─────────────────────────────────────────────── */

/* Base node in the model hierarchy */
/*  */
/* Nodes form the skeleton and attachment system of the model. Each node can have a parent creating a transformation hierarchy. Nodes can be: - Bones (for skeletal animation) - Helpers (attachment points) - Lights - Particle emitters - And other special objects */
/*  */
/* Nodes contain transformation animation tracks (translation, rotation, scaling). */
whiteout_MdxNode* whiteout_mdx_MdxNode_new(void);
void whiteout_mdx_MdxNode_delete(whiteout_MdxNode* self);
/* Node name (for debugging/reference) */
whiteout_CString whiteout_mdx_MdxNode_get_name(const whiteout_MdxNode* self);
void whiteout_mdx_MdxNode_set_name(whiteout_MdxNode* self, const char* value);
/* Unique ID for this node */
uint32_t whiteout_mdx_MdxNode_get_objectId(const whiteout_MdxNode* self);
void whiteout_mdx_MdxNode_set_objectId(whiteout_MdxNode* self, uint32_t value);
/* Parent node ID or NO_PARENT */
uint32_t whiteout_mdx_MdxNode_get_parentId(const whiteout_MdxNode* self);
void whiteout_mdx_MdxNode_set_parentId(whiteout_MdxNode* self, uint32_t value);
/* Combination of NodeFlag values */
int32_t whiteout_mdx_MdxNode_get_flags(const whiteout_MdxNode* self);
void whiteout_mdx_MdxNode_set_flags(whiteout_MdxNode* self, int32_t value);
/* Type of this node */
int32_t whiteout_mdx_MdxNode_get_type(const whiteout_MdxNode* self);
void whiteout_mdx_MdxNode_set_type(whiteout_MdxNode* self, int32_t value);
/* Used to link related nodes of the same type */
uint32_t whiteout_mdx_MdxNode_get_nodeFamilyId(const whiteout_MdxNode* self);
void whiteout_mdx_MdxNode_set_nodeFamilyId(whiteout_MdxNode* self, uint32_t value);
/* ── MdxSoundEmitter ─────────────────────────────────────────────── */

/* Sound emitter attached to the model hierarchy (deprecated) */
/*  */
/* Sound emitters are positioned nodes that can emit sounds at specific animation frames via KSEK tracks. While readers exist in the internal game code, no known shipped model contains SNEM data. */
whiteout_MdxSoundEmitter* whiteout_mdx_MdxSoundEmitter_new(void);
void whiteout_mdx_MdxSoundEmitter_delete(whiteout_MdxSoundEmitter* self);
/* ── MdxLayer ─────────────────────────────────────────────── */

/* Material rendering layer */
/*  */
/* Materials can have multiple layers, each with its own texture and blending mode. Layers control how textures are combined and rendered. */
whiteout_MdxLayer* whiteout_mdx_MdxLayer_new(void);
void whiteout_mdx_MdxLayer_delete(whiteout_MdxLayer* self);
/* Blending mode */
int32_t whiteout_mdx_MdxLayer_get_filterMode(const whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_filterMode(whiteout_MdxLayer* self, int32_t value);
/* Rendering flags */
int32_t whiteout_mdx_MdxLayer_get_shadingFlags(const whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_shadingFlags(whiteout_MdxLayer* self, int32_t value);
/* Texture index (versions 800-1100) */
uint32_t whiteout_mdx_MdxLayer_get_textureId(const whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_textureId(whiteout_MdxLayer* self, uint32_t value);
/* Texture animation index */
uint32_t whiteout_mdx_MdxLayer_get_textureAnimationId(const whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_textureAnimationId(whiteout_MdxLayer* self, uint32_t value);
/* Texture coordinate set index */
uint32_t whiteout_mdx_MdxLayer_get_coordId(const whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_coordId(whiteout_MdxLayer* self, uint32_t value);
/* Layer opacity */
float whiteout_mdx_MdxLayer_get_alpha(const whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_alpha(whiteout_MdxLayer* self, float value);
/* Emissive light intensity (default 1.0) */
float whiteout_mdx_MdxLayer_get_emissiveGain(const whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_emissiveGain(whiteout_MdxLayer* self, float value);
/* Fresnel effect color */
whiteout_Vector3f* whiteout_mdx_MdxLayer_get_fresnelColor(whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_fresnelColor(whiteout_MdxLayer* self, const whiteout_Vector3f* value);
/* Fresnel effect opacity */
float whiteout_mdx_MdxLayer_get_fresnelOpacity(const whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_fresnelOpacity(whiteout_MdxLayer* self, float value);
/* Fresnel team color factor */
float whiteout_mdx_MdxLayer_get_fresnelTeamColor(const whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_fresnelTeamColor(whiteout_MdxLayer* self, float value);
/* Shader to use for this layer */
int32_t whiteout_mdx_MdxLayer_get_shader(const whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_shader(whiteout_MdxLayer* self, int32_t value);
/* True if using Reforged HD shading */
int32_t whiteout_mdx_MdxLayer_get_isHd(const whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_isHd(whiteout_MdxLayer* self, int32_t value);
/* Multi-texture support (version 1200+) */
size_t whiteout_mdx_MdxLayer_get_subTextures_count(const whiteout_MdxLayer* self);
whiteout_MdxLayerSubTexture* whiteout_mdx_MdxLayer_get_subTextures_at(whiteout_MdxLayer* self, size_t index);
/* ── MdxLayerSubTexture ─────────────────────────────────────────────── */

/* Sub-texture definition (Reforged multi-texture) */
whiteout_MdxLayerSubTexture* whiteout_mdx_MdxLayerSubTexture_new(void);
void whiteout_mdx_MdxLayerSubTexture_delete(whiteout_MdxLayerSubTexture* self);
/* Index into texture array */
uint32_t whiteout_mdx_MdxLayerSubTexture_get_textureId(const whiteout_MdxLayerSubTexture* self);
void whiteout_mdx_MdxLayerSubTexture_set_textureId(whiteout_MdxLayerSubTexture* self, uint32_t value);
/* Texture slot number */
int32_t whiteout_mdx_MdxLayerSubTexture_get_slot(const whiteout_MdxLayerSubTexture* self);
void whiteout_mdx_MdxLayerSubTexture_set_slot(whiteout_MdxLayerSubTexture* self, int32_t value);
/* ── MdxMaterial ─────────────────────────────────────────────── */

/* Material definition with rendering properties */
/*  */
/* Materials define how surfaces are rendered. Each material contains one or more layers that specify textures and blending modes. */
whiteout_MdxMaterial* whiteout_mdx_MdxMaterial_new(void);
void whiteout_mdx_MdxMaterial_delete(whiteout_MdxMaterial* self);
/* Rendering priority (higher = render last); signed */
int32_t whiteout_mdx_MdxMaterial_get_priorityPlane(const whiteout_MdxMaterial* self);
void whiteout_mdx_MdxMaterial_set_priorityPlane(whiteout_MdxMaterial* self, int32_t value);
/* Material flags */
int32_t whiteout_mdx_MdxMaterial_get_flags(const whiteout_MdxMaterial* self);
void whiteout_mdx_MdxMaterial_set_flags(whiteout_MdxMaterial* self, int32_t value);
/* Shader name (Reforged) */
whiteout_CString whiteout_mdx_MdxMaterial_get_shader(const whiteout_MdxMaterial* self);
void whiteout_mdx_MdxMaterial_set_shader(whiteout_MdxMaterial* self, const char* value);
/* Rendering layers */
size_t whiteout_mdx_MdxMaterial_get_layers_count(const whiteout_MdxMaterial* self);
whiteout_MdxLayer* whiteout_mdx_MdxMaterial_get_layers_at(whiteout_MdxMaterial* self, size_t index);
/* ── MdxTextureAnimation ─────────────────────────────────────────────── */

/* UV coordinate animation */
/*  */
/* Texture animations transform UV coordinates over time, creating effects like scrolling water, rotating symbols, etc. */
whiteout_MdxTextureAnimation* whiteout_mdx_MdxTextureAnimation_new(void);
void whiteout_mdx_MdxTextureAnimation_delete(whiteout_MdxTextureAnimation* self);
/* ── MdxGeoset ─────────────────────────────────────────────── */

/* Mesh geometry */
/*  */
/* A geoset is a complete mesh with vertices, normals, faces, and skinning data. Models can have multiple geosets with different materials or LOD levels. */
whiteout_MdxGeoset* whiteout_mdx_MdxGeoset_new(void);
void whiteout_mdx_MdxGeoset_delete(whiteout_MdxGeoset* self);
/* Vertex positions */
size_t whiteout_mdx_MdxGeoset_get_vertexPositions_count(const whiteout_MdxGeoset* self);
const float* whiteout_mdx_MdxGeoset_get_vertexPositions_data(const whiteout_MdxGeoset* self);
/* Vertex normals */
size_t whiteout_mdx_MdxGeoset_get_vertexNormals_count(const whiteout_MdxGeoset* self);
const float* whiteout_mdx_MdxGeoset_get_vertexNormals_data(const whiteout_MdxGeoset* self);
/* Material index */
uint32_t whiteout_mdx_MdxGeoset_get_materialId(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_set_materialId(whiteout_MdxGeoset* self, uint32_t value);
/* Selection group (for editor) */
uint32_t whiteout_mdx_MdxGeoset_get_selectionGroup(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_set_selectionGroup(whiteout_MdxGeoset* self, uint32_t value);
/* Selection flags */
uint32_t whiteout_mdx_MdxGeoset_get_selectionFlags(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_set_selectionFlags(whiteout_MdxGeoset* self, uint32_t value);
/* Level of detail index */
uint32_t whiteout_mdx_MdxGeoset_get_lod(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_set_lod(whiteout_MdxGeoset* self, uint32_t value);
/* LOD name */
whiteout_CString whiteout_mdx_MdxGeoset_get_lodName(const whiteout_MdxGeoset* self);
void whiteout_mdx_MdxGeoset_set_lodName(whiteout_MdxGeoset* self, const char* value);
/* Per-sequence bounding volumes */
size_t whiteout_mdx_MdxGeoset_get_sequenceExtents_count(const whiteout_MdxGeoset* self);
whiteout_MdxExtent* whiteout_mdx_MdxGeoset_get_sequenceExtents_at(whiteout_MdxGeoset* self, size_t index);