bindings/csharp/Whiteout/Mdx/NativeMethods.Mdx.cs


    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxSound_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_mdx_MdxSound_get_soundFile(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxSound_set_soundFile(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxSound_get_maximumDistance(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxSound_set_maximumDistance(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxSound_get_minimumDistance(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxSound_set_minimumDistance(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxSound_get_soundChannel(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxSound_set_soundChannel(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxNode_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxNode_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_mdx_MdxNode_get_name(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxNode_set_name(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxNode_get_objectId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxNode_set_objectId(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxNode_get_parentId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxNode_set_parentId(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_mdx_MdxNode_get_flags(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxNode_set_flags(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_mdx_MdxNode_get_type(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxNode_set_type(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxNode_get_nodeFamilyId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxNode_set_nodeFamilyId(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxSoundEmitter_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxSoundEmitter_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxLayer_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxLayer_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_mdx_MdxLayer_get_filterMode(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxLayer_set_filterMode(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_mdx_MdxLayer_get_shadingFlags(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxLayer_set_shadingFlags(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxLayer_get_textureId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxLayer_set_textureId(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxLayer_get_textureAnimationId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxLayer_set_textureAnimationId(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxLayer_get_coordId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxLayer_set_coordId(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxLayer_get_alpha(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxLayer_set_alpha(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxLayer_get_emissiveGain(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxLayer_set_emissiveGain(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxLayer_get_fresnelColor(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxLayer_set_fresnelColor(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxLayer_get_fresnelOpacity(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxLayer_set_fresnelOpacity(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_mdx_MdxLayer_get_fresnelTeamColor(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxLayer_set_fresnelTeamColor(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_mdx_MdxLayer_get_shader(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxLayer_set_shader(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_mdx_MdxLayer_get_isHd(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxLayer_set_isHd(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxLayer_get_subTextures_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxLayer_get_subTextures_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxLayerSubTexture_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxLayerSubTexture_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxLayerSubTexture_get_textureId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxLayerSubTexture_set_textureId(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_mdx_MdxLayerSubTexture_get_slot(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxLayerSubTexture_set_slot(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxMaterial_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxMaterial_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_mdx_MdxMaterial_get_priorityPlane(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxMaterial_set_priorityPlane(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_mdx_MdxMaterial_get_flags(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxMaterial_set_flags(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_mdx_MdxMaterial_get_shader(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxMaterial_set_shader(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxMaterial_get_layers_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxMaterial_get_layers_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxTextureAnimation_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxTextureAnimation_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxGeoset_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxGeoset_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxGeoset_get_vertexPositions_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxGeoset_get_vertexPositions_data(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxGeoset_get_vertexNormals_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxGeoset_get_vertexNormals_data(IntPtr self);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxGeoset_get_materialId(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxGeoset_set_materialId(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxGeoset_get_selectionGroup(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxGeoset_set_selectionGroup(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxGeoset_get_selectionFlags(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxGeoset_set_selectionFlags(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_mdx_MdxGeoset_get_lod(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxGeoset_set_lod(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_mdx_MdxGeoset_get_lodName(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_mdx_MdxGeoset_set_lodName(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_mdx_MdxGeoset_get_sequenceExtents_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_mdx_MdxGeoset_get_sequenceExtents_at(IntPtr self, nuint index);

